--- a/8-9.html
+++ b/8-9.html
@@ -18,6 +18,15 @@
 	};
 	console.log(users, login);
 	console.log(users.length, login.length);
+	//Вариант 2
+	var numbers=[10,100,200,300,7], max=0;
+	if (numbers[1]!=numbers[numbers.length-2])
+	console.log(numbers[1],numbers[numbers.length-2]);	
+	for(var i = 0; i < numbers.length; i++)
+	if(numbers[i] > max)
+	max = numbers[i];
+	if (max>=0)
+	console.log(max);
 
 	//1
 	for (;;) {
